k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: token-splitter-service
spec:
  selector:
    app: token-splitter
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
